# saya

./: .gitignore  CMakeLists.txt  README.md
.github/: ISSUE_TEMPLATE.md
cmake/: saya-test-generator.cmake
cmake/Toolchain/: clang.cmake  gcc.cmake
include/saya/: blackhole.hpp  bridge.hpp  console.hpp  console_fwd.hpp  error.hpp  filesystem.hpp  flyweight.hpp  gumbo.hpp  ika_fwd.hpp  kei.hpp  kei_fwd.hpp  logger.hpp  logger_fwd.hpp  memory.hpp  normalizer.hpp  preprocessor.hpp  program_options.hpp  regex.hpp  stream_lock.hpp  stream_object.hpp  string.hpp  string_config.hpp  string_set.hpp  syncstream.hpp  syncstream_fwd.hpp  system.hpp  test.hpp  type_traits.hpp  voidstream.hpp  voidstream_fwd.hpp
include/saya/console/: color.hpp
include/saya/encoding/: error.hpp  ustring.hpp
include/saya/encoding/detail/: unicode_cast.hpp
include/saya/gumbo/: blade.hpp  common.hpp  error.hpp  helpers.hpp  make_range.hpp  shaver.hpp  string.hpp
include/saya/html/: escape.hpp  html_string.hpp
include/saya/html/detail/: escape_common.hpp  html_traits.hpp  named_character_references_table.hpp  unescape.hpp  unescape_traits.hpp
include/saya/ika/: ast_fwd.hpp  compiler.hpp  compiler_traits.hpp  error.hpp  evaluator.hpp  generator.hpp  grammar.hpp  grammar_fwd.hpp  linter.hpp
include/saya/ika/ast/: additional_class.hpp  all.hpp  ast_entity.hpp  attribute.hpp  block.hpp  callable.hpp  debug.hpp  declaration.hpp  definition.hpp  expr.hpp  fusion_adapt.hpp  generator.hpp  geo.hpp  group.hpp  id.hpp  io_fwd.hpp  keyword.hpp  lit.hpp  meta_lit.hpp  namespace.hpp  op.hpp  root.hpp  statement.hpp  syntax.hpp  var.hpp
include/saya/ika/ast/detail/: all.hpp  lookup_query.hpp
include/saya/ika/compiler/: bridge.hpp  source.hpp  source_data.hpp
include/saya/ika/detail/: ika_id.hpp
include/saya/ika/grammar/: to_ast.hpp  to_html.hpp
include/saya/ika/grammar/detail/: spirit_attribute_support.hpp
include/saya/ika/vm/: internal_def.hpp  internal_undef.hpp  type.hpp  value.hpp
include/saya/kei/: compiler.hpp  compiler_traits.hpp  language.hpp  linter.hpp  world.hpp  world_access.hpp
include/saya/kei/ast/: entity.hpp  error.hpp  literal.hpp  param.hpp
include/saya/lang/ika/: ast.hpp  ast_fwd.hpp  helper.hpp  karma.hpp  qi.hpp
include/saya/lang/ika/ast/: def.hpp  element.hpp  ika.hpp  keyword.hpp  traits.hpp
include/saya/logger/: level.hpp  level_traits.hpp  logger.hpp  logger_env.hpp  stream.hpp  traits.hpp
include/saya/program_options/: comma_separated_string.hpp  filesystem_path.hpp  utility.hpp
include/saya/test/: filesystem.hpp
include/saya/unicode/: normalize.hpp  normalized_string.hpp  string.hpp
include/saya/zed/: blackhole.hpp  core.hpp  debugger.hpp  destructor_handler.hpp  fold.hpp  memory.hpp  meta.hpp  pct.hpp  seq.hpp  terminal.hpp
scripts/: make_named_character_references_table.rb
src/: CMakeLists.txt
src/ika/: CMakeLists.txt  ast_io.cpp  compiler.cpp  compiler_misc.cpp  evaluator.cpp  generator.cpp  ikac.cpp
src/ika/grammar/: CMakeLists.txt  to_ast.cpp  to_html.cpp
src/kei/ast/: entity.cpp
src/lang/: CMakeLists.txt
src/lang/ika/: CMakeLists.txt
src/lang/ika/ast/: keyword.cpp
test/: CMakeLists.txt  gtest_main.cpp  logger_test.cpp  saya_test.hpp  syncstream_test.cpp
test/ika/ast/: ika_ast_geo_test.cpp
test/include/saya_test/: ika.hpp
test/saya_test/: bridge.hpp
